# atlas

./: .gitignore  ARCHITECTURE.md  CODEX_5_6_SHADOW_DETAIL_PLAN.md  Cargo.toml  LICENSE-NOTES.md  README.md  README_DIST.md  RENDERING_ISSUES.md  TODO.md  UI_ROADMAP.md
.cargo/: config.toml
.github/workflows/: release.yml
eft_pipeline/: __init__.py  assemble_bevy.py  build_grass.py
eft_pipeline/tarkmap_core/: __init__.py  config.py  culls.py  instmath.py  matsig.py  objio.py
extraction/: README.md  check_env.py  requirements-bake.txt  requirements-legacy-grade.txt  requirements.txt
extraction/bake/: bake_volume2.py
extraction/grade/: eft_grade_fit.json  make_grade_lut.py  make_grade_lut_game.py
extraction/intel/: build_loot.py  build_tasks.py  extract_gamedata.py  extract_semantics.py  fetch_icons.py  tarkov_static.py  tasks_zone_patch.json
extraction/maps/: manifest.json
extraction/maps/arena_airpit/: config.json
extraction/maps/arena_airpit_2.0/: config.json
extraction/maps/arena_autoservice/: config.json
extraction/maps/arena_bay5/: config.json
extraction/maps/arena_bowl/: config.json
extraction/maps/arena_equator/: config.json
extraction/maps/arena_factory/: config.json
extraction/maps/arena_ny_custom_lh/: config.json
extraction/maps/arena_ny_shoreline_lh/: config.json
extraction/maps/arena_ny_woods_lh/: config.json
extraction/maps/arena_prison/: config.json
extraction/maps/arena_sanatorium/: config.json
extraction/maps/arena_shooting_range/: config.json
extraction/maps/arena_train/: config.json
extraction/maps/arena_yard/: config.json
extraction/maps/customs/: config.json
extraction/maps/factory/: config.json
extraction/maps/factory_rework/: config.json
extraction/maps/fence/: config.json
extraction/maps/ground_zero/: config.json
extraction/maps/ground_zero_start/: config.json
extraction/maps/icebreaker/: config.json
extraction/maps/interchange/: config.json
extraction/maps/jaeger/: config.json
extraction/maps/labs/: config.json
extraction/maps/labyrinth/: config.json
extraction/maps/lighthouse/: config.json
extraction/maps/mechanic/: config.json
extraction/maps/peacekeeper/: config.json
extraction/maps/prapor/: config.json
extraction/maps/ragman/: config.json
extraction/maps/reserve/: config.json
extraction/maps/shoreline/: config.json
extraction/maps/skier/: config.json
extraction/maps/streets/: config.json
extraction/maps/synthtest/: config.json
extraction/maps/terminal/: config.json
extraction/maps/therapist/: config.json
extraction/maps/woods/: config.json
extraction/unity/: eft_extract_grass.py  eft_extract_lights.py  eft_extract_switches.py  eft_extract_v2.py  eft_scene_extract.py  extract_interact.py  extract_parallel.py
scripts/: bootstrap.ps1  build-clean.ps1  bundle-python.ps1  release.ps1
tools/: build_map.py  dedup_textures.py  extract_menu_prop.py  gen_maps.py  setup_deps.py  stamp_fingerprint.py  sync_intel.py
viewer/: Cargo.toml  build.rs
viewer/assets/shaders/: SHADER_PORT_MAP.md  cull.wgsl  gpu_cull.wgsl  gpu_draw.wgsl  gpu_shadow.wgsl  grade.wgsl  instanced.wgsl  instancing_m0.wgsl  sh_bake.wgsl  sh_bounce.wgsl  sh_gi.wgsl  splat.wgsl  ssao.wgsl  terrain_bake.wgsl
viewer/resources/: make_icon.py
viewer/src/: eftpack.rs  game_watch.rs  i18n.rs  inspect.rs  jobs.rs  loot.rs  main.rs  maps.rs  menu.rs  menu_fx.rs  nav.rs  nav_bake.rs  navigate_panel.rs  pathfind.rs  paths.rs  pick.rs  planner.rs  poi.rs  progress.rs  sh_bake.rs  sh_bake_gpu.rs  tasks_panel.rs  terrain_bake.rs  ui.rs  ui_theme.rs  update.rs  walk_ground.rs
viewer/src/render/: gpu_driven.rs  grade.rs  instancing.rs  mod.rs  ssao.rs  standard.rs
