[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
description = "Native GPU-driven EFT map viewer consuming .eftpack v1 packs"
publish = false

[dependencies]
bevy = { workspace = true }
# Direct wgpu dep, pinned EXACTLY to the version Bevy 0.17.3 vendors (26.0.1) with
# default-features off: Cargo feature-unifies it into Bevy's single wgpu build, so there is
# still only ONE wgpu in the graph (no two-versions hazard). It exists solely for the
# startup GPU-capability probe in `render::gpu_driven_supported` (auto-selecting the M0
# fallback on adapters without MULTI_DRAW_INDIRECT/bindless) — Bevy re-exports the wgpu
# enums but not `Instance`/`RequestAdapterOptions`, which the probe needs. All GPU types used
# in render code still come via `bevy::render` re-exports; keep the version in lockstep with Bevy.
wgpu = { version = "=26.0.1", default-features = false }
bytemuck = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy_egui = { workspace = true }
# On-demand pathfinding: blocking HTTP POST to the local :8091 GPU pathfind server (GraphQL).
# default-features=false drops rustls/TLS — we only ever hit http://127.0.0.1, no cert machinery.
ureq = { version = "2", default-features = false }
texpresso = "2.0.2"
# Native folder picker for the first-run onboarding (choose where extracted datasets live).
# default-features off = just the OS-native dialog, no Linux async/portal runtimes.
rfd = { version = "0.15", default-features = false }
# System UI language detection for the EN/RU default (overridable in the menu).
sys-locale = "0.3"

[features]
# egui is structural (ui/menu/inspect are unconditional modules); the feature remains as a
# no-op alias so `--features egui` invocations keep working.
default = ["egui"]
egui = []

[[bin]]
name = "atlas"
path = "src/main.rs"
