[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
description = "Native GPU-driven EFT map viewer consuming .eftpack v1 packs"
publish = false
build = "build.rs"

# Windows-only: embed the app icon (resources/atlas.ico) into the .exe so it shows in Explorer / the
# taskbar / a shortcut. No effect on other targets (the build.rs is a no-op there).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
bevy = { workspace = true }
# Direct wgpu dep, pinned EXACTLY to the version Bevy 0.17.3 vendors (26.0.1) with
# default-features off: Cargo feature-unifies it into Bevy's single wgpu build, so there is
# still only ONE wgpu in the graph (no two-versions hazard). It exists solely for the
# startup GPU-capability probe in `render::gpu_driven_supported` (auto-selecting the M0
# fallback on adapters without MULTI_DRAW_INDIRECT/bindless) — Bevy re-exports the wgpu
# enums but not `Instance`/`RequestAdapterOptions`, which the probe needs. All GPU types used
# in render code still come via `bevy::render` re-exports; keep the version in lockstep with Bevy.
wgpu = { version = "=26.0.1", default-features = false }
bytemuck = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy_egui = { workspace = true }
# Tiny HTTP client. `native-tls` = schannel on Windows (uses the OS cert store, so no bundled
# webpki-roots blob and no OpenSSL to fight +crt-static) — needed for the one HTTPS GET to the
# public GitHub releases API in `update.rs` (menu update check). default-features=false still drops
# gzip/cookies/json; the body is parsed with the workspace serde_json.
ureq = { version = "2", default-features = false, features = ["native-tls"] }
texpresso = "2.0.2"
# Native folder picker for the first-run onboarding (choose where extracted datasets live).
# default-features off = just the OS-native dialog, no Linux async/portal runtimes.
rfd = { version = "0.15", default-features = false }
# System UI language detection for the EN/RU default (overridable in the menu).
sys-locale = "0.3"
# Data-parallel column casting in the portable CPU nav baker (nav_bake). Already in the tree as a
# transitive dep (Bevy/wgpu), so this pins no new version — just makes it a direct dependency.
rayon = "1"

[features]
# egui is structural (ui/menu/inspect are unconditional modules); the feature remains as a
# no-op alias so `--features egui` invocations keep working.
default = ["egui"]
egui = []

[[bin]]
name = "atlas"
path = "src/main.rs"
